# urban-sdk-homework

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cli.py  justfile  main.py  pyproject.toml
docker/base/: .env  Dockerfile  docker-compose.yml  justfile
docker/dev/: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile
notebooks/: links.ipynb
scripts/: etl.sql  load.sh
urban_sdk_homework/: cli.py
urban_sdk_homework/core/: click.py  console.py  errors.py  fastapi.py  jinja.py  logging.py  models.py  modules.py  services.py  strings.py
urban_sdk_homework/core/auth/: errors.py  models.py  providers.py  settings.py  web.py
urban_sdk_homework/core/geometry/: errors.py  geojson.py  proj.py
urban_sdk_homework/core/project/: metadata.py  web.py
urban_sdk_homework/core/settings/: api.py  base.py  errors.py
urban_sdk_homework/modules/api/: app.py  services.py  settings.py
urban_sdk_homework/modules/api/cli/: commands.py
urban_sdk_homework/modules/traffic/: errors.py  models.py  services.py  settings.py
urban_sdk_homework/modules/traffic/api/: dependencies.py  endpoints.py
urban_sdk_homework/modules/traffic/cli/: commands.py
