[project]
name = "urban-sdk-homework"
description = "Urban SDK Homework Assignment"
readme = "README.md"
requires-python = ">=3.11.8"
dynamic = ["version"]

dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "fastapi>=0.115.12",
    "folium>=0.20.0",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "inflect>=7.5.0",
    "ipython<8.0",
    "jinja2>=3.1.6",
    "jupyter<1.1",
    "jupyterlab>=4.4.5",
    "mapboxgl>=0.10.2",
    "pandas>=2.3.1",
    "pendulum>=3.1.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pyproj>=3.7.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "semantic-version>=2.10.0",
    "shapely>=2.1.1",
    "sqlmodel>=0.0.24",
    "structlog>=25.4.0",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "absolufy-imports>=0.3.1",
    "bandit>=1.8.3",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
    "reorder-python-imports>=3.15.0",
    "uv>=0.6.16",
]

[project.scripts]
homework = "urban_sdk_homework.cli:run"

[tool.autoflake]
check = true
in-place = true
ignore-pass-statements = true
quiet = true
recursive = true
remove-all-unused-imports = true

[tool.black]
line-length = 79

[tool.setuptools]
packages = ["urban_sdk_homework"]

[tool.setuptools.dynamic]
version = {attr = "urban_sdk_homework.__version__"}
